# django-template

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEPLOYMENT.md  DEV.md  DOCKER.md  Dockerfile  Dockerfile.ultra-slim  Makefile  README.md  TEMPLATE_IMPROVEMENTS.md  init_project.py  pyproject.toml  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: context_processors.py  settings.py  urls.py  views.py
app/management/commands/: setup_project.py
requirements/: base.txt  development.txt  production.txt
static/css/: main.css
static/js/: main.js
templates/: home.html
templates/base/: base.html
tests/: test_asgi_wsgi.py  test_basic.py  test_debug_config.py  test_management_commands.py  test_settings.py
