[project]
name = "my-app"
version = "0.1.0"
description = "template for construction an app since beginnig"
authors = [{"name" = "Yeferson Toloza"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.3",
    "gunicorn>=23.0.0",
    "whitenoise>=6.8.2",
]

[dependency-groups]
dev = [
    # Code formatting and linting
    "black>=25.1.0",
    "isort>=5.13.2",
    "flake8>=7.2.0",
    "pylint>=3.3.2",
    "bandit>=1.8.0",

    # Type checking
    "mypy>=1.14.1",
    "django-stubs>=5.1.1",

    # Testing
    "pytest>=8.4.1",
    "pytest-django>=4.11.1",
    "pytest-cov>=6.2.1",
    "factory-boy>=3.3.1",

    # Development tools
    "django-debug-toolbar>=5.2.0",
    "django-extensions>=4.1.0",
    "ipython>=8.31.0",

    # Environment management
    "python-dotenv>=1.0.1",

    # Pre-commit hooks
    "pre-commit>=4.0.1",
]

prod = [
    # Database adapters
    "psycopg2-binary>=2.9.10",
    "dj-database-url>=2.3.0",

    # Monitoring and logging
    "sentry-sdk[django]>=2.20.0",

    # Performance
    "redis>=5.2.1",
    "django-redis>=5.4.0",
]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_django = "django"
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "app.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "app.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--cov=app --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = ["."]
omit = [
    "*/migrations/*",
    "*/venv/*",
    "*/env/*",
    "manage.py",
    "*/settings/*",
    "*/tests/*",
]

[tool.bandit]
skips = ["B101", "B601"]
exclude_dirs = ["tests", "migrations"]
